--- a/question3/src/app/app.component.html
+++ b/question3/src/app/app.component.html
@@ -6,17 +6,17 @@
 
 <h1>Formulaire qui sert à rien</h1>
 <mat-card style="width: 700px; margin: auto; padding: 20px;">
-  <form >
+  <form [formGroup]="formGroup">
 
     <mat-form-field style="width: 100%">
         <mat-label>Nom</mat-label>
-        <input matInput type="text" placeholder="Nom et prénom" name="name" >
+        <input matInput type="text" placeholder="Nom et prénom" name="name" formControlName="nom">
         
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
       <mat-label>Numéro de rue</mat-label>
-      <input matInput type="number" placeholder="5230" name="roadnumber">
+      <input matInput type="number" placeholder="5230" name="roadnumber" formControlName="numRue">
       
     </mat-form-field>
 
@@ -27,18 +27,20 @@
 
     <mat-form-field style="width: 100%">
       <mat-label>Code Postal</mat-label>
-      <input matInput type="text" placeholder="H2J8B2" name="postalcode">
+      <input matInput type="text" placeholder="H2J8B2" name="postalcode" formControlName="postal">
       
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
       <mat-label>Commentaire</mat-label>
-      <textarea matInput placeholder="Votre commentaire" name="comments"></textarea>
-      
+      <textarea matInput placeholder="Votre commentaire" name="comments" formControlName="commentaire"></textarea>
+      @if(formGroup.hasError('nomDansCommentaire')){
+        <mat-error>Le commentaire ne doit pas mentionner le nom de l’utilisateur</mat-error>
+      }
     </mat-form-field>
 
     <mat-card-actions align="end">
-      <button  mat-raised-button color="primary" >Acheter</button>
+      <button  mat-raised-button color="primary" [disabled]="!formGroup.valid">Acheter</button>
     </mat-card-actions>
   </form>
 </mat-card>
